--- a/package.json
+++ b/package.json
@@ -4,369 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "acorn": "^7.4.1",
-    "acorn-jsx": "^5.3.2",
-    "anser": "^1.4.9",
-    "ansi-colors": "^4.1.1",
-    "ajv": "^6.12.6",
-    "ansi-regex": "^5.0.1",
-    "argparse": "^1.0.10",
-    "ansi-styles": "^3.2.1",
-    "anymatch": "^3.1.2",
-    "array-union": "^2.1.0",
-    "aria-query": "^4.2.2",
-    "array-includes": "^3.1.4",
-    "array.prototype.flatmap": "^1.2.5",
-    "array.prototype.flat": "^1.2.5",
-    "asn1.js": "^5.4.1",
-    "ast-types": "^0.13.2",
-    "assert": "^2.0.0",
-    "ast-types-flow": "^0.0.7",
-    "astral-regex": "^2.0.0",
-    "available-typed-arrays": "^1.0.5",
-    "axobject-query": "^2.2.0",
-    "axe-core": "^4.3.3",
-    "balanced-match": "^1.0.2",
-    "big.js": "^5.2.2",
-    "base64-js": "^1.5.1",
-    "binary-extensions": "^2.2.0",
-    "bn.js": "^5.2.0",
-    "brorand": "^1.1.0",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.2",
-    "browserify-aes": "^1.2.0",
-    "browserify-cipher": "^1.0.1",
-    "browserify-des": "^1.0.2",
-    "browserify-rsa": "^4.1.0",
-    "browserify-sign": "^4.2.1",
-    "browserify-zlib": "^0.2.0",
-    "browserslist": "^4.16.6",
-    "buffer": "^5.6.0",
-    "builtin-status-codes": "^3.0.0",
-    "buffer-xor": "^1.0.3",
-    "bytes": "^3.1.0",
-    "call-bind": "^1.0.2",
-    "chalk": "^2.4.2",
-    "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001265",
-    "chokidar": "^3.5.1",
-    "classnames": "^2.2.6",
-    "cipher-base": "^1.0.4",
-    "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "colorette": "^1.4.0",
-    "concat-map": "^0.0.1",
-    "commondir": "^1.0.1",
-    "console-browserify": "^1.2.0",
-    "constants-browserify": "^1.0.0",
-    "convert-source-map": "^1.7.0",
-    "core-js-pure": "^3.18.2",
-    "core-util-is": "^1.0.3",
-    "create-ecdh": "^4.0.4",
-    "create-hash": "^1.2.0",
-    "create-hmac": "^1.1.7",
-    "css.escape": "^1.5.1",
-    "crypto-browserify": "^3.12.0",
-    "damerau-levenshtein": "^1.0.7",
-    "cssnano-preset-simple": "^3.0.0",
-    "cssnano-simple": "^3.0.0",
-    "data-uri-to-buffer": "^3.0.1",
-    "deep-is": "^0.1.4",
-    "debug": "^2.6.9",
-    "define-properties": "^1.1.3",
-    "depd": "^1.1.2",
-    "diffie-hellman": "^5.0.3",
-    "dir-glob": "^3.0.1",
-    "doctrine": "^3.0.0",
-    "domain-browser": "^4.19.0",
-    "electron-to-chromium": "^1.3.861",
-    "elliptic": "^6.5.4",
-    "emojis-list": "^2.1.0",
-    "encoding": "^0.1.13",
-    "emoji-regex": "^9.2.2",
-    "error-ex": "^1.3.2",
-    "es-to-primitive": "^1.2.1",
-    "es-abstract": "^1.19.1",
-    "enquirer": "^2.3.6",
-    "escalade": "^3.1.1",
-    "escape-string-regexp": "^1.0.5",
-    "eslint": "^7.32.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-config-next": "^11.1.2",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-module-utils": "^2.6.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-scope": "^5.1.1",
-    "eslint-visitor-keys": "^2.1.0",
-    "eslint-utils": "^2.1.0",
-    "espree": "^7.3.1",
-    "esquery": "^1.4.0",
-    "esprima": "^4.0.1",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^5.2.0",
-    "esutils": "^2.0.3",
-    "etag": "^1.8.1",
-    "evp_bytestokey": "^1.0.3",
-    "events": "^3.3.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^2.0.6",
-    "fastq": "^1.13.0",
-    "file-entry-cache": "^6.0.1",
-    "fast-glob": "^3.2.7",
-    "find-up": "^4.1.0",
-    "find-cache-dir": "^3.3.1",
-    "fill-range": "^7.0.1",
-    "flat-cache": "^3.0.4",
-    "flatted": "^3.2.2",
-    "foreach": "^2.0.5",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.1",
-    "functional-red-black-tree": "^1.0.1",
-    "gensync": "^1.0.0-beta.2",
-    "get-orientation": "^1.1.2",
-    "get-intrinsic": "^1.1.1",
-    "glob": "^7.1.7",
-    "get-symbol-description": "^1.0.0",
-    "glob-parent": "^5.1.2",
-    "glob-to-regexp": "^0.4.1",
-    "es6-object-assign": "^1.1.0",
-    "globals": "^11.12.0",
-    "globby": "^11.0.4",
-    "graceful-fs": "^4.2.8",
-    "has": "^1.0.3",
-    "has-bigints": "^1.0.1",
-    "has-symbols": "^1.0.2",
-    "has-flag": "^3.0.0",
-    "hash-base": "^3.1.0",
-    "has-tostringtag": "^1.0.0",
-    "hash.js": "^1.1.7",
-    "he": "^1.2.0",
-    "cross-spawn": "^7.0.3",
-    "hmac-drbg": "^1.0.1",
-    "https-browserify": "^1.0.0",
-    "iconv-lite": "^0.6.3",
-    "hosted-git-info": "^2.8.9",
-    "ieee754": "^1.2.1",
-    "ignore": "^4.0.6",
-    "image-size": "^1.0.0",
-    "import-fresh": "^3.3.0",
-    "inflight": "^1.0.6",
-    "imurmurhash": "^0.1.4",
-    "inherits": "^2.0.4",
-    "is-arguments": "^1.1.1",
-    "internal-slot": "^1.0.3",
-    "is-bigint": "^1.0.4",
-    "is-arrayish": "^0.2.1",
-    "is-binary-path": "^2.1.0",
-    "is-boolean-object": "^1.1.2",
-    "is-date-object": "^1.0.5",
-    "is-callable": "^1.2.4",
-    "is-core-module": "^2.7.0",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-generator-function": "^1.0.10",
-    "is-negative-zero": "^2.0.1",
-    "des.js": "^1.0.1",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "is-number-object": "^1.0.6",
-    "is-regex": "^1.1.4",
-    "is-string": "^1.0.7",
-    "is-shared-array-buffer": "^1.0.1",
-    "is-symbol": "^1.0.4",
-    "is-weakref": "^1.0.1",
-    "is-typed-array": "^1.1.8",
-    "isarray": "^1.0.0",
-    "jest-worker": "^27.0.0-next.5",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^3.14.1",
-    "json-parse-better-errors": "^1.0.2",
-    "jsesc": "^2.5.2",
-    "json-schema-traverse": "^0.4.1",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json5": "^2.2.0",
-    "jsx-ast-utils": "^3.2.1",
-    "language-tags": "^1.0.5",
-    "language-subtag-registry": "^0.3.21",
-    "levn": "^0.4.1",
-    "loader-utils": "^1.2.3",
-    "load-json-file": "^4.0.0",
-    "locate-path": "^5.0.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.merge": "^4.6.2",
-    "lodash.sortby": "^4.7.0",
-    "lodash.truncate": "^4.4.2",
-    "loose-envify": "^1.4.0",
-    "lru-cache": "^6.0.0",
-    "md5.js": "^1.3.5",
-    "make-dir": "^3.1.0",
-    "merge-stream": "^2.0.0",
-    "merge2": "^1.4.1",
-    "micromatch": "^4.0.4",
-    "miller-rabin": "^4.0.1",
-    "minimatch": "^3.0.4",
-    "minimalistic-crypto-utils": "^1.0.1",
-    "minimalistic-assert": "^1.0.1",
-    "minimist": "^1.2.5",
-    "ms": "^2.0.0",
-    "nanoid": "^3.1.29",
-    "natural-compare": "^1.4.0",
-    "native-url": "^0.3.4",
-    "next": "^11.1.2",
-    "node-fetch": "^2.6.1",
-    "node-html-parser": "^1.4.9",
-    "node-libs-browser": "^2.2.1",
-    "node-releases": "^1.1.77",
-    "normalize-package-data": "^2.5.0",
-    "normalize-path": "^3.0.0",
-    "object-inspect": "^1.11.0",
-    "object-assign": "^4.1.1",
-    "object-is": "^1.1.5",
-    "http-errors": "^1.7.3",
-    "object-keys": "^1.1.1",
-    "is-nan": "^1.3.2",
-    "object.assign": "^4.1.2",
-    "object.fromentries": "^2.0.5",
-    "object.values": "^1.1.5",
-    "once": "^1.4.0",
-    "object.hasown": "^1.1.0",
-    "optionator": "^0.9.1",
-    "p-limit": "^3.1.0",
-    "os-browserify": "^0.3.0",
-    "p-try": "^2.2.0",
-    "isexe": "^2.0.0",
-    "pako": "^1.0.11",
-    "object.entries": "^1.1.5",
-    "parent-module": "^1.0.1",
-    "parse-asn1": "^5.1.6",
-    "path-browserify": "^1.0.1",
-    "path-exists": "^4.0.0",
-    "parse-json": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "path-type": "^4.0.0",
-    "path-parse": "^1.0.7",
-    "path-key": "^3.1.1",
-    "pbkdf2": "^3.1.2",
-    "picomatch": "^2.3.0",
-    "pify": "^3.0.0",
-    "pkg-up": "^2.0.0",
-    "pkg-dir": "^4.2.0",
-    "pnp-webpack-plugin": "^1.6.4",
-    "platform": "^1.3.6",
-    "postcss": "^8.2.15",
-    "prelude-ls": "^1.2.1",
-    "process-nextick-args": "^2.0.1",
-    "process": "^0.11.10",
-    "prop-types": "^15.7.2",
-    "public-encrypt": "^4.0.3",
-    "progress": "^2.0.3",
-    "punycode": "^1.4.1",
-    "querystring": "^0.2.1",
-    "querystring-es3": "^0.2.1",
-    "queue": "^6.0.2",
-    "queue-microtask": "^1.2.3",
-    "randombytes": "^2.1.0",
-    "randomfill": "^1.0.4",
-    "raw-body": "^2.4.1",
-    "react": "^17.0.2",
-    "react-is": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-refresh": "^0.8.3",
-    "read-pkg": "^3.0.0",
-    "readable-stream": "^3.6.0",
-    "read-pkg-up": "^3.0.0",
-    "readdirp": "^3.5.0",
-    "regexp.prototype.flags": "^1.3.1",
-    "regexpp": "^3.2.0",
-    "resolve": "^1.20.0",
-    "require-from-string": "^2.0.2",
-    "regenerator-runtime": "^0.13.9",
-    "resolve-from": "^4.0.0",
-    "reusify": "^1.0.4",
-    "ripemd160": "^2.0.2",
-    "run-parallel": "^1.2.0",
-    "rimraf": "^3.0.2",
-    "safer-buffer": "^2.1.2",
-    "semver": "^6.3.0",
-    "setimmediate": "^1.0.5",
-    "safe-buffer": "^5.2.1",
-    "setprototypeof": "^1.1.1",
-    "sha.js": "^2.4.11",
-    "shebang-command": "^2.0.0",
-    "shell-quote": "^1.7.2",
-    "side-channel": "^1.0.4",
-    "shebang-regex": "^3.0.0",
-    "slash": "^3.0.0",
-    "slice-ansi": "^4.0.0",
-    "scheduler": "^0.20.2",
-    "spdx-license-ids": "^3.0.10",
-    "spdx-exceptions": "^2.3.0",
-    "sprintf-js": "^1.0.3",
-    "stacktrace-parser": "^0.1.10",
-    "source-map": "^0.8.0-beta.0",
-    "statuses": "^1.5.0",
-    "spdx-correct": "^3.1.1",
-    "stream-browserify": "^3.0.0",
-    "stream-parser": "^0.3.1",
-    "p-locate": "^4.1.0",
-    "stream-http": "^3.1.1",
-    "string-hash": "^1.1.3",
-    "string-width": "^4.2.3",
-    "string.prototype.matchall": "^4.0.6",
-    "string.prototype.trimend": "^1.0.4",
-    "string.prototype.trimstart": "^1.0.4",
-    "string_decoder": "^1.3.0",
-    "strip-bom": "^3.0.0",
-    "strip-ansi": "^6.0.0",
-    "strip-json-comments": "^3.1.1",
-    "styled-jsx": "^4.0.1",
-    "stylis": "^3.5.4",
-    "supports-color": "^5.5.0",
-    "stylis-rule-sheet": "^0.0.10",
-    "timers-browserify": "^2.0.12",
-    "text-table": "^0.2.0",
-    "table": "^6.7.2",
-    "to-arraybuffer": "^1.0.1",
-    "to-fast-properties": "^2.0.0",
-    "toidentifier": "^1.0.0",
-    "to-regex-range": "^5.0.1",
-    "tr46": "^1.0.1",
-    "ts-pnp": "^1.2.0",
-    "tsconfig-paths": "^3.11.0",
-    "tslib": "^1.14.1",
-    "tsutils": "^3.21.0",
-    "type-check": "^0.4.0",
-    "tty-browserify": "^0.0.1",
-    "unbox-primitive": "^1.0.1",
-    "type-fest": "^0.7.1",
-    "unpipe": "^1.0.0",
-    "url": "^0.11.0",
-    "uri-js": "^4.4.1",
-    "typescript": "^4.4.3",
-    "util": "^0.12.4",
-    "use-subscription": "^1.5.1",
-    "vm-browserify": "^1.1.2",
-    "util-deprecate": "^1.0.2",
-    "v8-compile-cache": "^2.3.0",
-    "validate-npm-package-license": "^3.0.4",
-    "watchpack": "^2.1.1",
-    "webidl-conversions": "^4.0.2",
-    "whatwg-url": "^7.1.0",
-    "which": "^2.0.2",
-    "which-boxed-primitive": "^1.0.2",
-    "word-wrap": "^1.2.3",
-    "xtend": "^4.0.2",
-    "which-typed-array": "^1.1.7",
-    "wrappy": "^1.0.2",
-    "yocto-queue": "^0.1.0",
-    "yallist": "^4.0.0",
-    "spdx-expression-parse": "^3.0.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
