--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.3",
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "next": "11.1.2",
     "next-connect": "^0.10.2",
+    "node": "^16.10.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
