--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.3",
     "axios": "^0.23.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
