--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
+    "embla-carousel-react": "^5.0.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
@@ -23,7 +24,8 @@
     "node": "^16.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.17.4"
+    "react-hook-form": "^7.17.4",
+    "react-responsive-carousel": "^3.2.21"
   },
   "devDependencies": {
     "eslint": "7.32.0",
